Added Score and basic hitbox

--- a/the-ripoff-in-question/index.html
+++ b/the-ripoff-in-question/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,9 +8,12 @@
     <title>Moorhuhn Ripoff</title>
     <link rel="stylesheet" href="./style/style.css">
 </head>
+
 <body>
+    <canvas id="hitboxCanvas"></canvas>
     <canvas id="canvas1"></canvas>
-    
+
     <script src="./js/script.js"></script>
 </body>
+
 </html>
